Configured swagger